# alpaca-rs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: ci.yml
.issues/: 000-roadmap.md  002-broker-api-accounts.md  003-broker-api-funding.md  004-crypto-trading-enhanced.md  006-news-api.md  008-oauth-support.md  009-broker-api-events-sse.md  010-account-activities-enhanced.md  011-portfolio-management.md  013-assets-enhanced.md  014-calendar-clock.md  015-error-handling.md  016-rate-limiting.md  017-testing-infrastructure.md  018-documentation.md  019-fix-protocol.md  020-statements-confirms.md  021-margin-short-selling.md  022-fractional-trading.md  023-paper-trading.md  024-local-currency-trading.md  025-ira-accounts.md  026-automated-dotenv-loading.md  design.md  examples-design.md  examples.md
alpaca-base/: Cargo.toml  README.md
alpaca-base/examples/: base_asset_filtering.rs  base_bar_params_builder.rs  base_bracket_order_config.rs  base_broker_account_types.rs  base_calendar_types.rs  base_credentials_from_env.rs  base_currency_conversion.rs  base_error_handling.rs  base_ira_types.rs  base_oauth_config.rs  base_option_contract_params.rs  base_order_types.rs  base_rate_limit_config.rs  base_test_assertions.rs  base_test_fixtures.rs
alpaca-base/src/: auth.rs  error.rs  lib.rs  test_utils.rs  types.rs  utils.rs
alpaca-fix/: Cargo.toml  README.md
alpaca-fix/examples/: fix_cancel_order.rs  fix_connect.rs  fix_disconnect.rs  fix_execution_report.rs  fix_execution_reports.rs  fix_heartbeat.rs  fix_limit_order.rs  fix_market_data_request.rs  fix_market_order.rs  fix_message_loop.rs  fix_new_order_single.rs  fix_order_cancel.rs  fix_session_setup.rs
alpaca-fix/src/: client.rs  codec.rs  config.rs  error.rs  lib.rs  messages.rs  session.rs  transport.rs
alpaca-http/: Cargo.toml  README.md
alpaca-http/examples/: http_ach_relationships.rs  http_cancel_order.rs  http_close_position.rs  http_corporate_actions.rs  http_create_broker_account.rs  http_create_limit_order.rs  http_create_market_order.rs  http_documents.rs  http_exchange_rates.rs  http_get_account.rs  http_get_bars.rs  http_get_broker_account.rs  http_get_calendar.rs  http_get_clock.rs  http_get_positions.rs  http_get_quotes.rs  http_get_trades.rs  http_ira_contributions.rs  http_journals.rs  http_list_assets.rs  http_list_orders.rs  http_market_clock.rs  http_news.rs  http_trading_calendar.rs  http_transfers.rs  market_data.rs  options_trading.rs  trading_bracket_order.rs
alpaca-http/src/: client.rs  endpoints.rs  error.rs  lib.rs
alpaca-websocket/: Cargo.toml  README.md
alpaca-websocket/examples/: ws_crypto_stream.rs  ws_reconnection.rs  ws_stock_bars_stream.rs  ws_stock_quotes_stream.rs  ws_stock_trades_stream.rs  ws_stream_news.rs  ws_trade_updates.rs  ws_websocket_config.rs
alpaca-websocket/src/: client.rs  config.rs  error.rs  lib.rs  messages.rs  streams.rs
alpaca-websocket/tests/: log_redaction.rs  market_data_stream.rs  trading_stream.rs
alpaca-websocket/tests/common/: mod.rs
examples/: advanced_error_handling.rs  advanced_rate_limiting.rs  advanced_retry_strategies.rs  base_asset_filtering.rs  base_bar_params_builder.rs  base_credentials_from_env.rs  base_error_handling.rs  base_order_types.rs  integration_bracket_order_with_updates.rs  integration_historical_data_download.rs  integration_http_websocket.rs  integration_options_scanner.rs  integration_order_lifecycle.rs  integration_paper_trading_bot.rs  integration_portfolio_rebalancer.rs  integration_realtime_data_logger.rs  integration_realtime_order_tracker.rs  trading_bracket_order.rs
src/: client.rs  error.rs  lib.rs  types.rs
