[package]
name = "alpaca-rs"
version = "0.1.0"
edition = "2021"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "This crate provides a client for the Alpaca Markets API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/alpaca-rs"
homepage = "https://github.com/joaquinbejar/alpaca-rs"
keywords = ["finance", "trading", "alpaca", "api", "markets"]
categories = ["finance", "data-structures"]

include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*",
    "tests/**/*",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*",
    "Docker/**/*",
]



[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "alpaca_rs"
path = "src/lib.rs"

