[workspace]
members = [
    "alpaca-base",
    "alpaca-http", 
    "alpaca-websocket",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client dependencies
reqwest = { version = "0.13", features = ["json"] }
url = "2.5"
urlencoding = "2.1"
serde_urlencoded = "0.7"

# WebSocket dependencies
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Crypto dependencies
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Utility dependencies
rand = "0.9"
dotenvy = "0.15"

# Internal workspace dependencies
alpaca-base = { path = "alpaca-base" }
alpaca-http = { path = "alpaca-http" }
alpaca-websocket = { path = "alpaca-websocket" }

