[workspace]
members = [
    "alpaca-base",
    "alpaca-http", 
    "alpaca-websocket",
    "alpaca-fix",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"

# HTTP client dependencies
reqwest = { version = "0.13", features = ["json"] }
url = "2.5"
urlencoding = "2.1"
serde_urlencoded = "0.7"

# WebSocket dependencies
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = "0.3"

# Crypto dependencies
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Utility dependencies
rand = "0.9"
dotenvy = "0.15"

# Internal workspace dependencies
alpaca-base = { path = "alpaca-base", version = "0.25.0" }
alpaca-http = { path = "alpaca-http", version = "0.21.0" }
alpaca-websocket = { path = "alpaca-websocket", version = "0.3.0" }
alpaca-fix = { path = "alpaca-fix", version = "0.3.0" }

