[package]
name = "alpaca-base"
version = "0.24.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Base library with common structs, traits, and logic for Alpaca API clients"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/alpaca-rs"
homepage = "https://github.com/joaquinbejar/alpaca-rs"
keywords = ["finance", "alpaca", "trading", "api"]
categories = ["finance", "data-structures", "api-bindings"]

[features]
default = []
test-utils = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
tokio-tungstenite = { workspace = true }
