[package]
name = "alpaca-fix"
version = "0.2.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "FIX protocol client for Alpaca trading platform"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/alpaca-rs"
homepage = "https://github.com/joaquinbejar/alpaca-rs"
keywords = ["finance", "alpaca", "trading", "fix", "protocol"]
categories = ["finance", "api-bindings", "network-programming"]

[features]
default = []
integration-tests = []

[dependencies]
alpaca-base = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
