[package]
name = "alpaca-http"
version = "0.2.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "HTTP REST API client for Alpaca trading platform"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/alpaca-rs"
homepage = "https://github.com/joaquinbejar/alpaca-rs"
keywords = ["finance", "alpaca", "trading", "api", "http"]
categories = ["finance", "api-bindings", "web-programming::http-client"]

[dependencies]
alpaca-base = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
serde_urlencoded = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
